# todo-list

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
src/: main.rs  tasks.rs
