[package]
name = "todo-list"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["macros", "serde", "formatting", "local-offset"] }
clap = { version = "4.4.14", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.3"
