[package]
name = "todo-list"
version = "1.2.1"
edition = "2021"
repository = "https://github.com/FraI3mega/todo-list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = [
  "macros",
  "serde",
  "formatting",
  "local-offset",
] }
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
